<resources>
    <string name="app_name">Texting</string>
    <string name="app_version">1.0.0.0</string>

    <string name="about_messaggi_description">La marca Texting y el logo son propiedad de Cursos
        Android ANT. Todos los derechos reservados.</string>
    <string name="about_privacy">Aviso de privacidad</string>
    <string name="about_version">Version:</string>
    <string name="about_webSite">www.texting.cursos-android-ant.com</string>

    <string name="common_error_server">Ha ocurrido un problema en el servidor, intente más tarde.</string>
    <string name="common_label_ok">OK</string>
    <string name="common_label_accept">Aceptar</string>
    <string name="common_label_cancel">Cancelar</string>
    <string name="common_label_email">Correo electrónico</string>
    <string name="common_message_noInternet">Sin acceso a internet, verifique su conexión</string>
    <string name="common_validate_field_required">Este campo es requerido.</string>
    <string name="common_validate_email_invalid">Este correo no tiene un formato válido, verifique.</string>

    <string name="description_img_sendMessage">Enviar mensaje</string>
    <string name="description_img_gellery">Seleccionar imagen desde la Galería.</string>
    <string name="description_img_profile">Imagen de perfil de usuario.</string>

    <string name="addFriend_error_message">Imposible enviar solicitud, intende más tarde.</string>
    <string name="addFriend_message_request_dispatched">Solicitud enviada exitosamente</string>
    <string name="addFriend_title">Añadir amigo</string>

    <string name="chat_dialog_sendImage_title">Enviar imagen</string>
    <string name="chat_dialog_sendImage_message">¿Deseas enviarle esta imagen a %s?</string>
    <string name="chat_dialog_sendImage_accept">Enviar</string>
    <string name="chat_error_imageUpload">Error al enviar la imagen, intente mas tarde.</string>
    <string name="chat_error_permission_denied">Ya no eres amigo de esta persona, envia otra solicitud para volver a platicar.</string>
    <string name="chat_status_connected">Conectado</string>

    <string name="login_error_user_exist">Usuario nuevo, registrando&#8230;></string>
    <string name="login_message_loading">Iniciando sesión&#8230;</string>
    <string name="login_message_starting">Preparando todo&#8230;</string>
    <string name="login_message_error">Imposible iniciar sesión, intente más tarde.</string>
    <string name="login_message_success">Bienvenido %s</string>

    <string name="main_dialog_accept">Eliminar</string>
    <string name="main_dialog_message_confirmDelete">¿Estas seguro que quieres quitar a %s de tus amigos?
        \nSus conversaciones no se eliminarán permanentemente.</string>
    <string name="main_dialog_title_confirmDelete">Eliminar amigo</string>
    <string name="main_error_permission_denied">Cerrando&#8230;</string>
    <string name="main_menu_about">Acerca de</string>
    <string name="main_menu_action_singoff">Cerrar sesión</string>
    <string name="main_message_request_accepted">Ahora %s y tu son amigos.</string>
    <string name="main_message_request_denied">Solicitud rechazada.</string>
    <string name="main_message_user_removed">Listo! Ya no son amigos.</string>
    <string name="main_title">Amigos</string>

    <string name="profile_title">Perfil</string>
    <string name="profile_dialog_title">Actualizar imagen de perfil</string>
    <string name="profile_dialog_message">¿Desea subir esta imagen a su perfil de usuario?</string>
    <string name="profile_dialog_accept">Subir</string>
    <string name="profile_error_userUpdated">Error al actualizar el usuario, intente mas tarde.</string>
    <string name="profile_error_imageUpdated">Error al actualizar la imagen de perfil. intente mas tarde.</string>
    <string name="profile_error_invalid_image">Esta imagen no se pudo procesar.</string>
    <string name="profile_error_notfound">Imagen/archivo no encontrado.</string>
    <string name="profile_hint_username">username</string>
    <string name="profile_message_userUpdated">Usuario actualizado correctamente.</string>
    <string name="profile_message_imageUploading">Cambiando imagen de perfil, espere&#8230;</string>
    <string name="profile_message_imageUpdated">Imagen de perfil actualizada exitosamente.</string>
    <string name="title_activity_main">Contactos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_item_max_messageUnread">99+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat</string>
    <string name="chat_status_last_connection">Última conexión: %s</string>
    <string name="method_not_exist">Error. Método no existe</string>
    <string name="main_tuto_message">Botón para agregar contactos con su email</string>
    <string name="main_tuto_ok">Entendido</string>
    <string name="main_tuto_fabAdd">addFab01</string>
    <string name="addFriend_error_user_exist">El usuario no existe</string>
</resources>
