<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_dialog"
    android:paddingEnd="@dimen/padding_dialog"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_vertical"
        android:textSize="@dimen/about_title_textSize"
        android:textAllCaps="true"
        android:drawableEnd="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_vertical_paddingTop"
        android:text="@string/about_version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray_700" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/gray_700"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_messaggi_description"
        android:textColor="@color/gray_700"
        android:layout_marginTop="@dimen/about_vertical_paddingTop"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_webSite"
        android:textColor="@color/blue_900"
        android:layout_marginTop="@dimen/about_vertical_paddingTop"
        />
</LinearLayout>